src/test/deca/context/invalid/decl_init/decl_itsel.deca
// Description:
//    Déclaration d'une variable par elle meme
//
// Resultats:
//    Line 9 : Type non défini
// 

{
    int a = a;
}
